<resources>
    <string name="app_name">Dating App</string>
    <string name="app_banner">App Banner</string>
    <string name="app_logo">App Logo</string>
    <string name="login">Login</string>

    <!-- Dialog Message -->
    <string name="first_time_user_message">
        I noticed this is your first login. Make sure to input your preferences in the Settings
        screen so we can find potential matches!
    </string>

    <!-- Fragment Tags-->
    <string name="tag_fragment_home">Home</string>
    <string name="tag_fragment_view_profile">View Profile</string>

    <!-- Intents and Bundle extras -->
    <string name="intent_user">intent_user</string>

    <!--User attributes-->
    <string name="profile_image">Profile image</string>
    <string name="name">name:</string>
    <string name="status">status:</string>
    <string name="interested_in">Interested in:</string>
    <string name="arrow_back">arrow back</string>
    <string name="gender">Gender:</string>
    <string name="item_home">home</string>
    <string name="item_phone">phone</string>
    <string name="item_connections">connections</string>

    <string name="tag_fragment_saved_connections">Saved Connections</string>
    <string name="tag_fragment_messages">Messages</string>
    <string name="message_item">This is a message</string>
    <string name="reply">Reply</string>
    <string name="background_image">Background Image</string>
    <string name="send">send</string>

    <!--Intents and Bundle Extras-->
    <string name="intent_new_camera_photo">intent_new_camera_photo</string>
    <string name="intent_new_gallery_photo">intent_new_gallery_photo</string>
    <string name="input_message_hint">input message...</string>
    <string name="intent_message">intent_message</string>


    <string name="tag_fragment_chats">Chats</string>
    <string name="settings">settings</string>
    <string name="agreement">agreement</string>
    <string name="header_image">Header Image</string>
    <string name="tabian_dating">Tabian Dating</string>
    <string name="tag_fragment_settings">Settings</string>
    <string name="tag_fragment_agreement">Agreement</string>

    <!-- Spinner Options -->
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Do Not Identify</item>
    </string-array>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_none">Do Not Identify</string>
    <string name="gender_prompt">Choose your gender</string>

    <string-array name="interested_in_array">
        <item>Male</item>
        <item>Female</item>
        <item>Anyone</item>
    </string-array>

    <string name="interested_in_male">Male</string>
    <string name="interested_in_female">Female</string>
    <string name="interested_in_anyone">Anyone</string>
    <string name="interested_in_prompt">What are you looking for?</string>

    <string-array name="relationship_status_array">
        <item>Looking</item>
        <item>Not Looking</item>
    </string-array>

    <string name="status_looking">Looking</string>
    <string name="status_not_looking">Not Looking</string>
    <string name="relationship_prompt">You you looking?</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
        anim id est laborum.
    </string>
    <string name="tag_fragment_gallery">Gallery</string>
    <string name="tag_fragment_photo">Photo</string>

</resources>