<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:contentPadding="8dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/image_view"
                android:scaleType="centerCrop"
                android:background="@drawable/ic_launcher_background"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/profile_image" />

            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/name_linear_layout"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@id/image_view">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/name_txt"
                    android:text="@string/name"
                    android:textStyle="bold|italic"
                    android:textSize="12sp"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/name_txt_value"
                    android:textSize="12sp"/>

            </com.google.android.material.circularreveal.CircularRevealLinearLayout>

            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/interested_in_linear_layout"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@id/name_linear_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/interested_in_txt"
                    android:text="@string/interested_in"
                    android:textStyle="bold|italic"
                    android:textSize="12sp"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/interested_in_txt_value"
                    android:textSize="12sp"/>

            </com.google.android.material.circularreveal.CircularRevealLinearLayout>

            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@id/interested_in_linear_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/status_txt"
                    android:text="@string/status"
                    android:textStyle="bold|italic"
                    android:textSize="12sp"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/status_txt_value"
                    android:textSize="12sp"/>

            </com.google.android.material.circularreveal.CircularRevealLinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

</androidx.constraintlayout.widget.ConstraintLayout>