<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/image_view_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1"
        tools:layout_editor_absoluteX="40dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circle_image_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.like.LikeButton
            android:id="@+id/like_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="0dp"
            app:icon_size="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_layout"
        app:layout_constraintVertical_weight="1"
        tools:layout_editor_absoluteX="40dp">

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:id="@+id/circularRevealLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_txt_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:text="@string/name"
                android:textAlignment="center"
                android:textSize="24sp" />

            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:id="@+id/gender_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/name_txt_value">

                <TextView
                    android:id="@+id/gender_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/gender"
                    android:textAlignment="viewEnd"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/gender_txt_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textAlignment="viewStart"/>

            </com.google.android.material.circularreveal.CircularRevealLinearLayout>

            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:id="@+id/interested_in_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/gender_linear_layout">

                <TextView
                    android:id="@+id/interested_in_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/interested_in"
                    android:textSize="20sp"
                    android:textAlignment="viewEnd"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/interested_in_txt_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:textSize="20sp" />

            </com.google.android.material.circularreveal.CircularRevealLinearLayout>

            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/interested_in_linear_layout">

                <TextView
                    android:id="@+id/status_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/status"
                    android:textSize="20sp"
                    android:textAlignment="viewEnd"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/status_txt_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:textSize="20sp" />

            </com.google.android.material.circularreveal.CircularRevealLinearLayout>


        </com.google.android.material.circularreveal.CircularRevealLinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>